Errors detected by HTML validator corrected

--- a/index.html
+++ b/index.html
@@ -11,8 +11,6 @@
 
   <body>
 
-
-
     <!-- NAVBAR-->
     <div class="bg-primary">
         <div class="container pt-1">
@@ -49,8 +47,8 @@
     <!-- JUMBOTRON -->
     <div class="bg-light" id="jumbotron-wrapper">
         <div class="container">
-            <div class="jumbotron bg-light">
-                <h1>Create Smiles with a New Teddy Bear!</h1>
+            <div class= "jumbotron bg-light">
+                <h1 class="h1-shadow">Create Smiles with a New Teddy Bear!</h1>
                 <h2 class="h4 text-primary">from Orinco's Teddy Bear Store</h2>
             </div>
         </div>   
@@ -59,19 +57,22 @@
     
     <!-- CARDS -->
     <section class="container">
+        <div class="row d-flex align-items-center pt-5">
+            <h3 class="col-12">Handmade Teddy Selection</h3></div>
+            <hr class="section-header-hr">
         <div class="row py-5"> 
 
             <div class="col-12 col-sm-6 col-lg-4">
                 <div class="card my-3 shadow-sm border border-warning custom-border-radius hoverable">
-                    <img class="card-img-top shadow-sm image" alt="Norbert: A cute soft fuzzy medium brown teddy bear">
+                    <img src="#" class="card-img-top shadow-sm image" alt="Norbert: A cute soft fuzzy medium brown teddy bear">
                     <div class="card-body">
                         <div>
                             <p class="name h5"></p>
                             <p class="description"></p>
                         </div>
                         <div class="d-flex justify-content-between align-items-center">
-                            <strong><div class="price"></div></strong>
-                            <a href="x"><button type="button" class="btn btn-primary">Shop Now</button></a>
+                            <div class="price font-weight-bold"></div>
+                            <a href="x" class="btn btn-primary">Shop Now</a>
                         </div>
                     </div>
                 </div>
@@ -80,15 +81,15 @@
     
             <div class="col-12 col-sm-6 col-lg-4 custom-border-radius hoverable">
                 <div class="card my-3 shadow-sm border border-warning">
-                    <img class="card-img-top shadow-sm image" alt="Arnold: Small tan teddy with short soft fur">
+                    <img src="#" class="card-img-top shadow-sm image" alt="Arnold: Small tan teddy with short soft fur">
                     <div class="card-body">
                         <div>
                             <p class="name h5"></p>
                             <p class="description"></p>
                         </div>
                         <div class="d-flex justify-content-between align-items-center">
-                            <strong><div class="price"></div></strong>
-                            <a href="x"><button type="button" class="btn btn-primary">Shop Now</button></a>
+                            <div class="price font-weight-bold"></div>
+                            <a href="x" class="btn btn-primary">Shop Now</a>
                         </div>
                     </div>
                 </div>
@@ -98,15 +99,15 @@
 
             <div class="col-12 col-sm-6 col-lg-4 custom-border-radius hoverable">
                 <div class="card my-3 shadow-sm border border-warning">
-                    <img class="card-img-top shadow-sm image" alt="Lenny and Carl: Adorable curly haired father and son teddies. Carl has a heart shaped patch on his chest.">
+                    <img src="#" class="card-img-top shadow-sm image" alt="Lenny and Carl: Adorable curly haired father and son teddies. Carl has a heart shaped patch on his chest.">
                     <div class="card-body">
                         <div>
                             <p class="name h5"></p>
                             <p class="description"></p>
                         </div>
                         <div class="d-flex justify-content-between align-items-center">
-                            <strong><div class="price"></div></strong>
-                            <a href="x"><button type="button" class="btn btn-primary">Shop Now</button></a>
+                            <div class="price font-weight-bold"></div>
+                            <a href="x" class="btn btn-primary">Shop Now</a>
                         </div>
                     </div>
                 </div>
@@ -116,15 +117,15 @@
 
             <div class="col-12 col-sm-6 col-lg-4 custom-border-radius hoverable">
                 <div class="card my-3 shadow-sm border border-warning">
-                    <img class="card-img-top shadow-sm image" alt="Gustav: Shaggy long haired teddy wearing a T-shirt">
+                    <img src="#" class="card-img-top shadow-sm image" alt="Gustav: Shaggy long haired teddy wearing a T-shirt">
                     <div class="card-body">
                         <div>
                             <p class="name h5"></p>
                             <p class="description"></p>
                         </div>
                         <div class="d-flex justify-content-between align-items-center">
-                            <strong><div class="price"></div></strong>
-                            <a href="x"><button type="button" class="btn btn-primary">Shop Now</button></a>
+                            <div class="price font-weight-bold"></div>
+                            <a href="x" class="btn btn-primary">Shop Now</a>
                         </div>
                     </div>
                 </div>
@@ -132,15 +133,15 @@
 
             <div class="col-12 col-sm-6 col-lg-4 custom-border-radius hoverable">
                 <div class="card my-3 shadow-sm border border-warning">
-                    <img class="card-img-top shadow-sm image" alt="Garfunkle: Extra plush soft teddy">
+                    <img src="#" class="card-img-top shadow-sm image" alt="Garfunkle: Extra plush soft teddy">
                     <div class="card-body">
                         <div>
                             <p class="name h5"></p>
                             <p class="description"></p>
                         </div>
                         <div class="d-flex justify-content-between align-items-center">
-                            <strong><div class="price"></div></strong>
-                            <a href="x"><button type="button" class="btn btn-primary">Shop Now</button></a>
+                            <div class="price font-weight-bold"></div>
+                            <a href="x" class="btn btn-primary">Shop Now</a>
                         </div>
                     </div>
                 </div>
