Refactored get request for list view (home) page. Started working on URL query parameter for single view page.

--- a/index.html
+++ b/index.html
@@ -65,15 +65,15 @@
 
             <div class="col-12 col-sm-6 col-lg-4">
                 <div class="card my-3 shadow-sm border border-warning custom-border-radius hoverable">
-                    <img src="#" class="card-img-top shadow-sm image image-small" alt="Norbert: A cute soft fuzzy medium brown teddy bear">
+                    <img id="norbert-image" src="#" class="card-img-top shadow-sm image-small" alt="Norbert: A cute soft fuzzy medium brown teddy bear">
                     <div class="card-body">
                         <div>
-                            <p class="name h5"></p>
-                            <p class="description"></p>
+                            <p class="h5" id="norbert-name"></p>
+                            <p id="norbert-description"></p>
                         </div>
                         <div class="d-flex justify-content-between align-items-center">
-                            <div class="price font-weight-bold"></div>
-                            <a href="frontend/pages/norbert.html" class="btn btn-primary">Shop Now</a>
+                            <div class="font-weight-bold" id="norbert-price"></div>
+                            <a href="frontend/pages/single-item.html" class="btn btn-primary">Shop Now</a>
                         </div>
                     </div>
                 </div>
@@ -82,15 +82,15 @@
     
             <div class="col-12 col-sm-6 col-lg-4 custom-border-radius hoverable">
                 <div class="card my-3 shadow-sm border border-warning">
-                    <img src="#" class="card-img-top shadow-sm image image-small" alt="Arnold: Small tan teddy with short soft fur">
+                    <img id="arnold-image" src="#" class="card-img-top shadow-sm image-small" alt="Arnold: Small tan teddy with short soft fur">
                     <div class="card-body">
                         <div>
-                            <p class="name h5"></p>
-                            <p class="description"></p>
+                            <p class="h5" id="arnold-name"></p>
+                            <p id="arnold-description"></p>
                         </div>
                         <div class="d-flex justify-content-between align-items-center">
-                            <div class="price font-weight-bold"></div>
-                            <a href="x" class="btn btn-primary">Shop Now</a>
+                            <div class="font-weight-bold" id="arnold-price"></div>
+                            <a href="frontend/pages/single-item.html" class="btn btn-primary">Shop Now</a>
                         </div>
                     </div>
                 </div>
@@ -100,15 +100,15 @@
 
             <div class="col-12 col-sm-6 col-lg-4 custom-border-radius hoverable">
                 <div class="card my-3 shadow-sm border border-warning">
-                    <img src="#" class="card-img-top shadow-sm image image-small" alt="Lenny and Carl: Adorable curly haired father and son teddies. Carl has a heart shaped patch on his chest.">
+                    <img id="lennyandcarl-image" src="#" class="card-img-top shadow-sm image-small" alt="Lenny and Carl: Adorable curly haired father and son teddies. Carl has a heart shaped patch on his chest.">
                     <div class="card-body">
                         <div>
-                            <p class="name h5"></p>
-                            <p class="description"></p>
+                            <p class="h5" id="lennyandcarl-name"></p>
+                            <p id="lennyandcarl-description"></p>
                         </div>
                         <div class="d-flex justify-content-between align-items-center">
-                            <div class="price font-weight-bold"></div>
-                            <a href="x" class="btn btn-primary">Shop Now</a>
+                            <div class="font-weight-bold" id="lennyandcarl-price"></div>
+                            <a href="frontend/pages/single-item.html" class="btn btn-primary">Shop Now</a>
                         </div>
                     </div>
                 </div>
@@ -118,15 +118,15 @@
 
             <div class="col-12 col-sm-6 col-lg-4 custom-border-radius hoverable">
                 <div class="card my-3 shadow-sm border border-warning">
-                    <img src="#" class="card-img-top shadow-sm image image-small" alt="Gustav: Shaggy long haired teddy wearing a T-shirt">
+                    <img id="gustav-image" src="#" class="card-img-top shadow-sm image-small" alt="Gustav: Shaggy long haired teddy wearing a T-shirt">
                     <div class="card-body">
                         <div>
-                            <p class="name h5"></p>
-                            <p class="description"></p>
+                            <p class="h5" id="gustav-name"></p>
+                            <p id="gustav-description"></p>
                         </div>
                         <div class="d-flex justify-content-between align-items-center">
-                            <div class="price font-weight-bold"></div>
-                            <a href="x" class="btn btn-primary">Shop Now</a>
+                            <div class="font-weight-bold" id="gustav-price"></div>
+                            <a href="frontend/pages/single-item.html" class="btn btn-primary">Shop Now</a>
                         </div>
                     </div>
                 </div>
@@ -134,15 +134,15 @@
 
             <div class="col-12 col-sm-6 col-lg-4 custom-border-radius hoverable">
                 <div class="card my-3 shadow-sm border border-warning">
-                    <img src="#" class="card-img-top shadow-sm image image-small" alt="Garfunkle: Extra plush soft teddy">
+                    <img id="garfunkle-image" src="#" class="card-img-top shadow-sm image-small" alt="Garfunkle: Extra plush soft teddy">
                     <div class="card-body">
                         <div>
-                            <p class="name h5"></p>
-                            <p class="description"></p>
+                            <p class="h5" id="garfunkle-name"></p>
+                            <p id="garfunkle-description"></p>
                         </div>
                         <div class="d-flex justify-content-between align-items-center">
-                            <div class="price font-weight-bold"></div>
-                            <a href="x" class="btn btn-primary">Shop Now</a>
+                            <div class="font-weight-bold" id="garfunkle-price"></div>
+                            <a href="frontend/pages/single-item.html" class="btn btn-primary">Shop Now</a>
                         </div>
                     </div>
                 </div>
