--- a/frontend/pages/single-item.html
+++ b/frontend/pages/single-item.html
@@ -56,6 +56,7 @@
 
     
     <!-- SECTION  -->
+
     <section class="container">
 
         <div class="row d-flex align-items-center pt-5">
@@ -67,13 +68,13 @@
     
         <div class="bg-white row mx-1 mb-5 shadow-sm border border-warning single-product-card">
             <div class="col-12 col-md-6 p-none">
-                <img src="#" class="image image-large shadow">
+                <img id="norbert-image" src="#" class="image-large shadow">
             </div>
             <div class="col-12 col-md-6">
                 <div class="row p-3 h-50">
                     <div class="col">
-                        <div class="name h3 font-weight-bold"></div>
-                        <div class="description"></div>
+                        <div class="h3 font-weight-bold" id="norbert-name"></div>
+                        <div id="norbert-description"></div>
                         <div class="dropdown my-5 d-flex justify-content-start">
                             <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                               Customize Norbert
@@ -88,7 +89,7 @@
                 </div>
                 <div class= "row p-3 h-50 align-items-end">
                     <div class="col d-flex justify-content-between align-items-center">
-                        <div class="price font-weight-bold"></div>
+                        <div id="norbert-price" class="font-weight-bold"></div>
                         <a href="#" class="btn btn-primary">Add to Cart</a>
                     </div>
                 </div> 
