Further shortened code for list view page api request by removing unneeded variables

--- a/frontend/pages/single-item.html
+++ b/frontend/pages/single-item.html
@@ -60,7 +60,7 @@
     <section class="container">
 
         <div class="row d-flex align-items-center pt-5">
-            <h3 class="col-12">Meet Norbert</h3>
+            <h3 class="col-12"></h3>
             <hr class="section-header-hr">
         </div>
 
@@ -77,7 +77,7 @@
                         <div id="norbert-description"></div>
                         <div class="dropdown my-5 d-flex justify-content-start">
                             <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                              Customize Norbert
+                              Customize
                             </button>
                             <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                               <a class="dropdown-item" href="#">Option 1</a>
