Added event listeners to buttons that navigate to single product page. Wrote get request for single product page.

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                         </div>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="font-weight-bold price"></div>
-                            <a href="frontend/pages/single-item.html?id=${product.id}" class="btn btn-primary">Shop Now</a>
+                            <a href="frontend/pages/single-item.html?id=${product.id}" class="btn btn-primary" type="submit">Shop Now</a>
                         </div>
                     </div>
                 </div>
@@ -91,7 +91,7 @@
                         </div>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="font-weight-bold price"></div>
-                            <a href="frontend/pages/single-item.html?id=${product.id}" class="btn btn-primary">Shop Now</a>
+                            <a href="frontend/pages/single-item.html?id=${product.id}" class="btn btn-primary" type="submit">Shop Now</a>
                         </div>
                     </div>
                 </div>
@@ -109,7 +109,7 @@
                         </div>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="font-weight-bold price"></div>
-                            <a href="frontend/pages/single-item.html?id=${product.id}" class="btn btn-primary">Shop Now</a>
+                            <a href="frontend/pages/single-item.html?id=${product.id}" class="btn btn-primary" type="submit">Shop Now</a>
                         </div>
                     </div>
                 </div>
@@ -126,7 +126,7 @@
                         </div>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="font-weight-bold price"></div>
-                            <a href="frontend/pages/single-item.html?id=${product.id}" class="btn btn-primary">Shop Now</a>
+                            <a href="frontend/pages/single-item.html?id=${product.id}" class="btn btn-primary" type="submit">Shop Now</a>
                         </div>
                     </div>
                 </div>
@@ -142,7 +142,7 @@
                         </div>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="font-weight-bold price"></div>
-                            <a href="frontend/pages/single-item.html?id=${product.id}" class="btn btn-primary">Shop Now</a>
+                            <a href="frontend/pages/single-item.html?id=${product.id}" class="btn btn-primary" type="submit">Shop Now</a>
                         </div>
                     </div>
                 </div>
