--- a/frontend/pages/single-item.html
+++ b/frontend/pages/single-item.html
@@ -68,13 +68,13 @@
     
         <div class="bg-white row mx-1 mb-5 shadow-sm border border-warning single-product-card">
             <div class="col-12 col-md-6 p-none">
-                <img id="norbert-image" src="#" class="image-large shadow">
+                <img id="image" src="#" class="image-large shadow">
             </div>
             <div class="col-12 col-md-6">
                 <div class="row p-3 h-50">
                     <div class="col">
-                        <div class="h3 font-weight-bold" id="norbert-name"></div>
-                        <div id="norbert-description"></div>
+                        <div class="h3 font-weight-bold" id="name"></div>
+                        <div id="description"></div>
                         <div class="dropdown my-5 d-flex justify-content-start">
                             <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                               Customize
@@ -89,7 +89,7 @@
                 </div>
                 <div class= "row p-3 h-50 align-items-end">
                     <div class="col d-flex justify-content-between align-items-center">
-                        <div id="norbert-price" class="font-weight-bold"></div>
+                        <div id="price" class="font-weight-bold"></div>
                         <a href="#" class="btn btn-primary">Add to Cart</a>
                     </div>
                 </div> 
@@ -151,6 +151,6 @@
 
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
-<script src="/frontend/js/javascript.js"></script>
+<script src="../js/javascript.js"></script>
 </body>
 </html>
