--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css" />
     <link rel="icon" href="frontend/images/favicon.png">
+    <script>window.addEventListener('load', () => {
+        apiRequest.open('GET', 'http://localhost:3000/api/teddies');
+        apiRequest.send();
+      })</script>
   </head>
 
   <body>
@@ -74,7 +78,7 @@
                         </div>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="font-weight-bold price"></div>
-                            <a href="frontend/pages/single-item.html?id=${product.id}" class="btn btn-primary" type="submit">Shop Now</a>
+                            <a href="frontend/pages/single-item.html" class="btn btn-primary" type="submit">Shop Now</a>
                         </div>
                     </div>
                 </div>
@@ -91,7 +95,7 @@
                         </div>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="font-weight-bold price"></div>
-                            <a href="frontend/pages/single-item.html?id=${product.id}" class="btn btn-primary" type="submit">Shop Now</a>
+                            <a href="frontend/pages/single-item.html" class="btn btn-primary" type="submit">Shop Now</a>
                         </div>
                     </div>
                 </div>
@@ -109,7 +113,7 @@
                         </div>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="font-weight-bold price"></div>
-                            <a href="frontend/pages/single-item.html?id=${product.id}" class="btn btn-primary" type="submit">Shop Now</a>
+                            <a href="frontend/pages/single-item.html" class="btn btn-primary" type="submit">Shop Now</a>
                         </div>
                     </div>
                 </div>
@@ -126,7 +130,7 @@
                         </div>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="font-weight-bold price"></div>
-                            <a href="frontend/pages/single-item.html?id=${product.id}" class="btn btn-primary" type="submit">Shop Now</a>
+                            <a href="frontend/pages/single-item.html" class="btn btn-primary" type="submit">Shop Now</a>
                         </div>
                     </div>
                 </div>
@@ -142,7 +146,7 @@
                         </div>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="font-weight-bold price"></div>
-                            <a href="frontend/pages/single-item.html?id=${product.id}" class="btn btn-primary" type="submit">Shop Now</a>
+                            <a href="frontend/pages/single-item.html" class="btn btn-primary" type="submit">Shop Now</a>
                         </div>
                     </div>
                 </div>
