Single-item page now displaying content dynamically. Began working on logic for cart functionality.

--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css" />
     <link rel="icon" href="frontend/images/favicon.png">
-    <script>window.addEventListener('load', () => {
-        apiRequest.open('GET', 'http://localhost:3000/api/teddies');
-        apiRequest.send();
-      })</script>
+
   </head>
 
   <body>
@@ -209,6 +206,6 @@
 
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
-<script src="/frontend/js/javascript.js"></script>
+<script src="/frontend/js/product-list.js"></script>
 </body>
 </html>
