--- a/frontend/pages/single-item.html
+++ b/frontend/pages/single-item.html
@@ -7,15 +7,11 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
     <link rel="stylesheet" href="../../css/style.css" />
     <link rel="icon" href="../images/favicon.png">
-    <script>  
-        window.addEventListener('load', () => {
-        apiRequest2.open('GET', 'http://localhost:3000/api/teddies/5be9c8541c9d440000665243');
-        apiRequest2.send();
-        }); 
-    </script>
+
   </head>
 
   <body>
+
 
     <!-- NAVBAR-->
     <div class="bg-primary">
@@ -86,9 +82,9 @@
                               Customize
                             </button>
                             <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                              <a class="dropdown-item" href="#">Option 1</a>
-                              <a class="dropdown-item" href="#">Option 2</a>
-                              <a class="dropdown-item" href="#">Option 3</a>
+                              <a class="dropdown-item" id="option1" href="#">Option 1</a>
+                              <a class="dropdown-item" id="option2" href="#">Option 2</a>
+                              <a class="dropdown-item" id="option3" href="#">Option 3</a>
                             </div>
                           </div>
                     </div>
@@ -96,7 +92,7 @@
                 <div class= "row p-3 h-50 align-items-end">
                     <div class="col d-flex justify-content-between align-items-center">
                         <div id="price" class="font-weight-bold"></div>
-                        <a href="#" class="btn btn-primary">Add to Cart</a>
+                        <a href="#" class="btn btn-primary" id="addToCartBtn">Add to Cart</a>
                     </div>
                 </div> 
             </div>
@@ -157,6 +153,6 @@
 
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
-<script src="../js/javascript.js"></script>
+<script src="../js/single-item.js"></script>
 </body>
 </html>
