Add to cart and remove from cart functionality added.

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                    
                 </nav>
                 <div class="col-3 col-sm-2 col-md-1 d-flex justify-content-center align-items-center">
+                    <div class="cartQty"></div>
                     <a class="text-white" href="#"><i class="fas fa-shopping-cart fa-lg"></i></a>
                 </div>
             </div>
