--- a/frontend/pages/single-item.html
+++ b/frontend/pages/single-item.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
   <html lang="en">
   <head>
-    <title>Norbert - The Teddy Bear Store</title>
+    <title>The Teddy Bear Store</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
@@ -40,6 +40,7 @@
                    
                 </nav>
                 <div class="col-3 col-sm-2 col-md-1 d-flex justify-content-center align-items-center">
+                    <div id="cartQty"></div>
                     <a class="text-white" href="#"><i class="fas fa-shopping-cart fa-lg"></i></a>
                 </div>
             </div>
@@ -92,7 +93,11 @@
                 <div class= "row p-3 h-50 align-items-end">
                     <div class="col d-flex justify-content-between align-items-center">
                         <div id="price" class="font-weight-bold"></div>
-                        <a href="#" class="btn btn-primary" id="addToCartBtn">Add to Cart</a>
+                        <div class="container" id="cartButtons">
+                            
+                            <button class="btn btn-primary" id="addToCartBtn" type="button">Add to Cart</button>
+                            <button class="btn btn-primary" id="removeItemBtn" type="button">-</button>
+                        </div>
                     </div>
                 </div> 
             </div>
