Cart functionality completed. Cart page: order summary logic complete. Began work on form.

--- a/frontend/pages/single-item.html
+++ b/frontend/pages/single-item.html
@@ -30,7 +30,7 @@
                                 <a class="nav-link text-white" href="index.html">Login</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-white" href="#">Order Status</a>
+                                <a class="nav-link text-white" href="/frontend/pages/cart-page.html">My Order</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link text-white" href="#">Wishlist</a>
@@ -40,7 +40,7 @@
                    
                 </nav>
                 <div class="col-3 col-sm-2 col-md-1 d-flex justify-content-center align-items-center">
-                    <div id="cartQty"></div>
+                    <div id="cartQty" class="d-flex justify-content-center align-items-center"></div>
                     <a class="text-white" href="#"><i class="fas fa-shopping-cart fa-lg"></i></a>
                 </div>
             </div>
@@ -83,9 +83,9 @@
                               Customize
                             </button>
                             <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                              <a class="dropdown-item" id="option1" href="#">Option 1</a>
-                              <a class="dropdown-item" id="option2" href="#">Option 2</a>
-                              <a class="dropdown-item" id="option3" href="#">Option 3</a>
+                              <button class="dropdown-item" type="button" id="option1">Option 1</button>
+                              <button class="dropdown-item" type="button" id="option2">Option 2</button>
+                              <button class="dropdown-item" type="button" id="option3">Option 3</button>
                             </div>
                           </div>
                     </div>
