--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                                 <a class="nav-link text-white" href="index.html">Login</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-white" href="#">Order Status</a>
+                                <a class="nav-link text-white" href="/frontend/pages/cart-page.html">My Order</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link text-white" href="#">Wishlist</a>
@@ -39,7 +39,7 @@
                    
                 </nav>
                 <div class="col-3 col-sm-2 col-md-1 d-flex justify-content-center align-items-center">
-                    <div class="cartQty"></div>
+                    <div id="cartQty" class="d-flex justify-content-center align-items-center"></div>
                     <a class="text-white" href="#"><i class="fas fa-shopping-cart fa-lg"></i></a>
                 </div>
             </div>
