POST request added

--- a/frontend/pages/cart-page.html
+++ b/frontend/pages/cart-page.html
@@ -55,8 +55,9 @@
             <table class="table flex-column-reverse" id="myTable">
                 <thead>
                     <tr>
-                      <th scope="col">Quantity</th>
                       <th scope="col">Item</th>
+                      <th scope="col">Quantity</th>
+                      <th scope="col">Unit Price</th>
                       <th scope="col">Price</th>
                     </tr>
                   </thead>
@@ -64,6 +65,7 @@
                 </tbody>
                 <tfoot>
                     <tr>
+                        <th></th>
                         <th></th>
                         <th>Your Total</th>
                         <th id="cart-total"></th>
@@ -80,28 +82,28 @@
         <div class="form-row">
           <div class="form-group col-md-6">
             <label for="inputEmail4">First Name</label>
-            <input type="email" class="form-control" id="inputEmail4" placeholder="Email">
+            <input type="text" class="form-control" id="first-name" placeholder="First Name" required>
           </div>
           <div class="form-group col-md-6">
             <label for="inputPassword4">Last Name</label>
-            <input type="password" class="form-control" id="inputPassword4" placeholder="Password">
+            <input type="text" class="form-control" id="last-name" placeholder="Last Name" required>
           </div>
         </div>
         <div class="form-group">
           <label for="inputAddress">Address</label>
-          <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+          <input type="text" class="form-control" id="address" placeholder="Address" required>
         </div>
         <div class="form-group">
           <label for="inputAddress2">City</label>
-          <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor">
+          <input type="text" class="form-control" id="city" placeholder="City" required>
         </div>
         <div class="form-row">
           <div class="form-group col-md-6">
             <label for="inputCity">Email</label>
-            <input type="text" class="form-control" id="inputCity">
+            <input type="email" class="form-control" id="email" placeholder="Email" required>
           </div>
         </div>
-        <button type="submit" class="btn btn-primary">Submit Order</button>
+        <button id="submit-button" type="submit" class="btn btn-primary">Submit Order</button>
       </form>
       
 </section>
