Added order confirmetion number and total price to confirmation page

--- a/frontend/pages/confirmation-page.html
+++ b/frontend/pages/confirmation-page.html
@@ -46,67 +46,9 @@
     </div>
 </div>
 
-<!-- Order Summary -->
 
-<section class="container cart-summary p-5">
-    <div class="row">
-        <div class="col">
-            <div class="h3">Your Cart</div>
-            <table class="table flex-column-reverse" id="myTable">
-                <thead>
-                    <tr>
-                      <th scope="col">Item</th>
-                      <th scope="col">Quantity</th>
-                      <th scope="col">Unit Price</th>
-                      <th scope="col">Price</th>
-                    </tr>
-                  </thead>
-                <tbody>
-                </tbody>
-                <tfoot>
-                    <tr>
-                        <th></th>
-                        <th></th>
-                        <th>Your Total</th>
-                        <th id="cart-total"></th>
-                    </tr>
-                </tfoot>
-              </table>
-        </div>
-    </div>
-</section>
-
-<section class="container">
-
-    <form class="p-3">
-        <div class="form-row">
-          <div class="form-group col-md-6">
-            <label for="inputEmail4">First Name</label>
-            <input type="text" class="form-control" id="first-name" placeholder="First Name" required>
-          </div>
-          <div class="form-group col-md-6">
-            <label for="inputPassword4">Last Name</label>
-            <input type="text" class="form-control" id="last-name" placeholder="Last Name" required>
-          </div>
-        </div>
-        <div class="form-group">
-          <label for="inputAddress">Address</label>
-          <input type="text" class="form-control" id="address" placeholder="Address" required>
-        </div>
-        <div class="form-group">
-          <label for="inputAddress2">City</label>
-          <input type="text" class="form-control" id="city" placeholder="City" required>
-        </div>
-        <div class="form-row">
-          <div class="form-group col-md-6">
-            <label for="inputCity">Email</label>
-            <input type="email" class="form-control" id="email" placeholder="Email" required>
-          </div>
-        </div>
-        <a href="/frontend/pages/confirmation-page.html" id="submit-button" role="button" type="submit" class="btn btn-primary">Submit Order</a>
-      </form>
-      
-</section>
+<div id="id"></div>
+<div id="price"></div>
 <!-- FOOTER -->
 <footer class="bg-dark p-3 container-fluid text-light">
     <div class ="row text-center">
@@ -161,6 +103,6 @@
 
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
-<script src="../js/cart-page.js"></script>
+<script src="../js/confirmation-page.js"></script>
 </body>
 </html>
