--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
                     </div>
                    
                 </nav>
-                <div class="col-3 col-sm-2 col-md-1 d-flex justify-content-center align-items-center">
-                    <div id="cartQty" class="d-flex justify-content-center align-items-center"></div>
-                    <a class="text-white" href="#"><i class="fas fa-shopping-cart fa-lg"></i></a>
-                </div>
+                <a class="col-3 col-sm-2 col-md-1 d-flex justify-content-center align-items-center text-decoration-none" href="frontend/pages/cart-page.html">
+                    <div id="cartQty" class="d-flex justify-content-center align-items-center text-dark"></div>
+                    <i class="fas text-white fa-shopping-cart fa-lg"></i>
+                </a>
             </div>
         </div>
     </div>
