Form validation revamped to use custom javascript

--- a/frontend/pages/cart-page.html
+++ b/frontend/pages/cart-page.html
@@ -109,10 +109,11 @@
         <div class="form-row">
           <div class="form-group col-md-6">
             <label for="email">Email Address</label>
-            <input type="text" class="form-control" id="email" placeholder="Email Address" required>
+            <input type="text" class="form-control" id="email" placeholder="Email Address">
           </div>
         </div>
-        <button type="submit" id="submit-button" class="btn btn-primary">Submit Order</button>
+        <input type="submit" id="submit-button" class="btn btn-primary" value="Submit">
+        <div id="warning"></div>
       </form>
       
       
