--- a/frontend/pages/cart-page.html
+++ b/frontend/pages/cart-page.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
-    <link rel="stylesheet" href="../../css/style.css" />
+    <link rel="stylesheet" href="../css/style.css" />
     <link rel="icon" href="../images/favicon.png">
 
   </head>
@@ -23,16 +23,10 @@
                 </button>
 
                 <div id="navbarContent" class="collapse navbar-collapse">
-                    <a class="navbar-brand text-white" href="x">Orinco</a>
+                    <a class="navbar-brand text-white" href="../../index.html">Orinco</a>
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="index.html">Login</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-white" href="#">Order Status</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-white" href="#">Wishlist</a>
+                            <a class="nav-link text-white" href="cart-page.html">My Order</a>
                         </li>
                     </ul>
                 </div>
@@ -88,6 +82,9 @@
 
 
       <form id="form" class="container mb-5">
+        <div class="form-row d-flex justify-content-center align-items-center">
+            <div id="warning" class="p-5"></div>
+        </div>
         <div class="form-row">
           <div class="form-group col-md-6">
             <label for="firstName">First Name</label>
@@ -112,10 +109,11 @@
             <input type="text" class="form-control" id="email" placeholder="Email Address">
           </div>
         </div>
-        <input type="submit" id="submit-button" class="btn btn-primary" value="Submit">
-        <div id="warning"></div>
+        <div class="form-row">
+            <input type="submit" id="submit-button" class="btn btn-primary" value="Submit">
+        </div>
       </form>
-      
+
       
 
 <!-- FOOTER -->
