--- a/frontend/pages/confirmation-page.html
+++ b/frontend/pages/confirmation-page.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
-    <link rel="stylesheet" href="../../css/style.css" />
+    <link rel="stylesheet" href="../css/style.css" />
     <link rel="icon" href="../images/favicon.png">
 
   </head>
@@ -23,16 +23,10 @@
                 </button>
 
                 <div id="navbarContent" class="collapse navbar-collapse">
-                    <a class="navbar-brand text-white" href="x">Orinco</a>
+                    <a class="navbar-brand text-white" href="../../index.html">Orinco</a>
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="index.html">Login</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-white" href="#">Order Status</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-white" href="#">Wishlist</a>
+                            <a class="nav-link text-white" href="cart-page.html">My Order</a>
                         </li>
                     </ul>
                 </div>
@@ -40,7 +34,7 @@
             </nav>
             <div class="col-3 col-sm-2 col-md-1 d-flex justify-content-center align-items-center">
                 <div id="cartQty" class="d-flex justify-content-center align-items-center"></div>
-                <a class="text-white" href="#"><i class="fas fa-shopping-cart fa-lg"></i></a>
+                <a class="text-white" href="cart-page.html"><i class="fas fa-shopping-cart fa-lg"></i></a>
             </div>
         </div>
     </div>
