--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="frontend/css/style.css" />
     <link rel="icon" href="frontend/images/favicon.png">
 
   </head>
@@ -23,16 +23,10 @@
                     </button>
 
                     <div id="navbarContent" class="collapse navbar-collapse">
-                        <a class="navbar-brand text-white" href="x">Orinco</a>
+                        <a class="navbar-brand text-white" href="index.html">Orinco</a>
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a class="nav-link text-white" href="index.html">Login</a>
-                            </li>
-                            <li class="nav-item">
                                 <a class="nav-link text-white" href="/frontend/pages/cart-page.html">My Order</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-white" href="#">Wishlist</a>
                             </li>
                         </ul>
                     </div>
@@ -76,7 +70,7 @@
                         </div>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="font-weight-bold price"></div>
-                            <a href="frontend/pages/single-item.html" class="btn btn-primary" type="submit">Shop Now</a>
+                            <a href="frontend/pages/single-item.html" class="btn btn-primary">Shop Now</a>
                         </div>
                     </div>
                 </div>
@@ -93,7 +87,7 @@
                         </div>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="font-weight-bold price"></div>
-                            <a href="frontend/pages/single-item.html" class="btn btn-primary" type="submit">Shop Now</a>
+                            <a href="frontend/pages/single-item.html" class="btn btn-primary">Shop Now</a>
                         </div>
                     </div>
                 </div>
@@ -111,7 +105,7 @@
                         </div>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="font-weight-bold price"></div>
-                            <a href="frontend/pages/single-item.html" class="btn btn-primary" type="submit">Shop Now</a>
+                            <a href="frontend/pages/single-item.html" class="btn btn-primary">Shop Now</a>
                         </div>
                     </div>
                 </div>
@@ -128,7 +122,7 @@
                         </div>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="font-weight-bold price"></div>
-                            <a href="frontend/pages/single-item.html" class="btn btn-primary" type="submit">Shop Now</a>
+                            <a href="frontend/pages/single-item.html" class="btn btn-primary">Shop Now</a>
                         </div>
                     </div>
                 </div>
@@ -144,7 +138,7 @@
                         </div>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="font-weight-bold price"></div>
-                            <a href="frontend/pages/single-item.html" class="btn btn-primary" type="submit">Shop Now</a>
+                            <a href="frontend/pages/single-item.html" class="btn btn-primary">Shop Now</a>
                         </div>
                     </div>
                 </div>
