--- a/frontend/pages/cart-page.html
+++ b/frontend/pages/cart-page.html
@@ -94,7 +94,7 @@
             </div>
             <div class="form-row">
                 <div class="form-group col-md-6">
-                    <label for="firstName">First Name</label>
+                    <label for="first-name">First Name</label>
                     <input type="text" class="form-control" id="first-name" placeholder="First Name" required>
                 </div>
                 <div class="form-group col-md-6">
