--- a/frontend/pages/single-item.html
+++ b/frontend/pages/single-item.html
@@ -57,7 +57,7 @@
     <section class="container d-flex justify-content-center">
         <div class="row bg-white mx-1 my-5 shadow-sm border border-warning single-product-card">
             <div class="col-12 col-md-6 p-none">
-                <img id="image" src="#" class="image-large shadow">
+                <img id="image" src="#" class="image-large shadow" alt="teddy bear image">
             </div>
             <div class="col-12 col-md-6">
                 <div class="row px-3">
