--- a/frontend/pages/cart-page.html
+++ b/frontend/pages/cart-page.html
@@ -20,20 +20,20 @@
                 <nav class="col-9 col-sm-10 col-md-11 navbar navbar-expand-md">
                     <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarContent">
                         <span class="navbar-toggler-icon"><i class="fas fa-bars"
-                                style="color:#fff; font-size:28px;"></i></span>
+                                style="color:#000; font-size:28px;"></i></span>
                     </button>
                     <div id="navbarContent" class="collapse navbar-collapse">
-                        <a class="navbar-brand text-white" href="../../index.html">Orinco</a>
+                        <a class="navbar-brand text-black" href="../../index.html">Orinco</a>
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a class="nav-link text-white" href="cart-page.html">My Order</a>
+                                <a class="nav-link text-black" href="cart-page.html">My Order</a>
                             </li>
                         </ul>
                     </div>
                 </nav>
                 <div class="col-3 col-sm-2 col-md-1 d-flex justify-content-center align-items-center">
                     <div id="cartQty" class="d-flex justify-content-center align-items-center"></div>
-                    <a class="text-white" href="#"><i class="fas fa-shopping-cart fa-lg"></i></a>
+                    <a class="text-black" href="#"><i class="fas fa-shopping-cart fa-lg"></i></a>
                 </div>
             </div>
         </div>
@@ -133,7 +133,7 @@
         <div class="row ml-4">
             <div class="col-12 col-md">
                 <ul class="list-unstyled mx-auto">
-                    <li class="text-white"><strong>About</strong></li>
+                    <li class="text-black"><strong>About</strong></li>
                     <li>Our Store</li>
                     <li>Product Safety</li>
                     <li>Careers</li>
