--- a/frontend/pages/single-item.html
+++ b/frontend/pages/single-item.html
@@ -19,38 +19,27 @@
         <div class="container pt-1">
             <div class="row">
                 <nav class="col-9 col-sm-10 col-md-11 navbar navbar-expand-md">
-                    <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarContent">
+                    <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarContent" aria-label="menu">
                         <span class="navbar-toggler-icon"><i class="fas fa-bars"
-                                style="color:#fff; font-size:28px;"></i></span>
+                                style="color:#000; font-size:28px;"></i></span>
                     </button>
                     <div id="navbarContent" class="collapse navbar-collapse">
-                        <a class="navbar-brand text-white" href="../../index.html">Orinco</a>
+                        <a class="navbar-brand text-black" href="../../index.html">Orinco</a>
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a class="nav-link text-white" href="/frontend/pages/cart-page.html">My Order</a>
+                                <a class="nav-link text-black" href="/frontend/pages/cart-page.html">My Order</a>
                             </li>
                         </ul>
                     </div>
                 </nav>
                 <a class="col-3 col-sm-2 col-md-1 d-flex justify-content-center align-items-center text-decoration-none"
-                    href="cart-page.html">
+                    href="cart-page.html" aria-label="Cart">
                     <div id="cartQty" class="d-flex justify-content-center align-items-center text-dark"></div>
-                    <i class="fas text-white fa-shopping-cart fa-lg"></i>
+                    <i class="fas text-black fa-shopping-cart fa-lg"></i>
                 </a>
             </div>
         </div>
     </div>
-
-    <!-- JUMBOTRON -->
-    <div class="bg-light" id="jumbotron-wrapper">
-        <div class="container">
-            <div class="jumbotron bg-light">
-                <h1 class="h1-shadow">Create Smiles with a New Teddy Bear!</h1>
-                <h2 class="h4 text-primary">from Orinco's Teddy Bear Store</h2>
-            </div>
-        </div>
-    </div>
-
 
     <!-- MAIN SECTION  -->
     <div class="single-product-section d-flex p-5">
@@ -78,12 +67,13 @@
                                 </div>
                             </div>
                         </div>
+                        <hr>
                     </div>
                 </div>
-                <hr>
+                
                 <div class="row py-2 px-3 d-flex justify-content-between align-items-center">
-                    <button class="btn btn-secondary btn-sm" id="removeItemBtn" type="button">Remove</button>
-                    <button class="btn btn-primary" id="addToCartBtn" type="button">Add to Cart</button>
+                    <button class="btn btn-secondary btn-sm m-2" id="removeItemBtn" type="button">Remove</button>
+                    <button class="btn btn-primary m-2" id="addToCartBtn" type="button">Add to Cart</button>
                 </div>
                 <br>
             </div>
