--- a/index.html
+++ b/index.html
@@ -18,23 +18,23 @@
         <div class="container pt-1">
             <div class="row">
                 <nav class="col-9 col-sm-10 col-md-11 navbar navbar-expand-md">
-                    <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarContent">
+                    <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarContent" aria-label="menu">
                         <span class="navbar-toggler-icon"><i class="fas fa-bars"
-                                style="color:#fff; font-size:28px;"></i></span>
+                                style="color:#000; font-size:28px;"></i></span>
                     </button>
                     <div id="navbarContent" class="collapse navbar-collapse">
-                        <a class="navbar-brand text-white" href="index.html">Orinco</a>
+                        <a class="navbar-brand text-black" href="index.html">Orinco</a>
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a class="nav-link text-white" href="/frontend/pages/cart-page.html">My Order</a>
+                                <a class="nav-link text-black" href="/frontend/pages/cart-page.html">My Order</a>
                             </li>
                         </ul>
                     </div>
                 </nav>
                 <a class="col-3 col-sm-2 col-md-1 d-flex justify-content-center align-items-center text-decoration-none"
-                    href="frontend/pages/cart-page.html">
+                    href="frontend/pages/cart-page.html" aria-label="cart">
                     <div id="cartQty" class="d-flex justify-content-center align-items-center text-dark"></div>
-                    <i class="fas text-white fa-shopping-cart fa-lg"></i>
+                    <i class="fas text-black fa-shopping-cart fa-lg"></i>
                 </a>
             </div>
         </div>
